--- a/public/parts/header.html
+++ b/public/parts/header.html
@@ -9,7 +9,7 @@
 				<div class="top-nav__col top-nav__col--logo col-lg order-lg-first">
 					<a class="top-nav__logo" href="/">
 						<div class="top-nav__animate" data-json="logo.json">
-						</div><img src="/img/logo-text.svg" alt="logo"/>
+						</div><img src="img/logo-text.svg" alt="logo"/>
 					</a>
 				</div>
 				<div class="top-nav__col top-nav__col--caption col-lg order-lg-first">
