--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,12 @@
 				<!-- start headerBlock-->
 				<div class="headerBlock" id="headerBlock">
 					<div class="container">
-						<div class="headerBlock__img-wrap"><img class="res-i" src="img/panda-cover.jpg" alt=""/>
+						<div class="headerBlock__img-wrap">
+							<!-- picture-->
+							<picture> 
+								<source type="image/webp" srcset="img/@2x/webp/panda-cover.webp"/><img src="img/@2x/panda-cover.jpg" alt="" loading="lazy"/>
+							</picture>
+							<!-- /picture-->
 						</div>
 						<div class="headerBlock__slider-wrap">
 							<div class="headerBlock__slider headerBlock__slider--js splide" role="group">
