--- a/public/parts/footer.html
+++ b/public/parts/footer.html
@@ -35,7 +35,7 @@
 		<div class="footer__row row">
 			<div class="col-lg-auto col">© 2014–2023 Михаил&nbsp;Ишметов</div>
 			<div class="col-lg-auto col order-lg-last text-end">
-				<a class="footer__link text-body" href="#">Политика конфиденциальности
+				<a class="footer__link text-body" href="#"> <span class="link-inner">Политика конфиденциальности</span>
 				</a>
 			</div>
 			<div class="col-lg">
