--- a/public/parts/header.html
+++ b/public/parts/header.html
@@ -8,8 +8,8 @@
 				<div class="col-lg-auto d-none d-lg-block"></div>
 				<div class="top-nav__col top-nav__col--logo col-lg order-lg-first">
 					<a class="top-nav__logo" href="/">
-						<div class="top-nav__animate" data-json="logo.json">
-						</div><img src="img/logo-text.svg" alt="logo"/>
+						<lottie-player class="top-nav__animate lottie-js" src="logo.json" id="logo">
+						</lottie-player><img src="img/logo-text.svg" alt="logo"/>
 					</a>
 				</div>
 				<div class="top-nav__col top-nav__col--caption col-lg order-lg-first">
