--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -27,6 +27,7 @@
 		</script>
 	</head>
 	<body class="loaded_hiding">
+		<div class="loader"></div>
 		<div class="ink-cursor" id="ink-cursor"></div>
 		<div class="main-wrapper custom-scroll-js">
 			<main>
