--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,14 @@
 		</script>
 	</head>
 	<body class="loaded_hiding main-page">
+		<div class="loader"></div>
 		<div class="ink-cursor" id="ink-cursor"></div>
 		<div class="main-wrapper custom-scroll-js">
 			<!-- start header-->
 			<header class="header" id="header">
 				<!-- start top-nav-->
 				<div class="top-nav block-with-lazy">
-					<div class="container">
+					<div class="container-fluid">
 						<div class="row">
 							<div class="col-lg-auto d-none d-lg-block"></div>
 							<div class="top-nav__col top-nav__col--logo col-lg order-lg-first">
@@ -75,7 +76,7 @@
 			<main>
 				<!-- start headerBlock-->
 				<div class="headerBlock" id="headerBlock">
-					<div class="container">
+					<div class="container-fluid">
 						<div class="headerBlock__img-wrap" data-image="img/panda-cover.jpg" data-displacement="img/4.png">
 						</div>
 						<div class="headerBlock__slider-wrap">
