--- a/public/parts/footer.html
+++ b/public/parts/footer.html
@@ -1,6 +1,6 @@
 
 <footer class="footer">
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col-lg-auto">
 				<div class="footer__text">Создаем яркие веб-сайты и&nbsp;брендинг на&nbsp;которые обращают внимание
@@ -33,16 +33,21 @@
 		<a class="footer__btn btn btn-outline-white" href="#"><span class="btn__bg"></span>Смотреть проекты
 		</a>
 		<div class="footer__row row">
-			<div class="col-lg-auto col">© 2014–2023 Михаил&nbsp;Ишметов</div>
+			<div class="col-lg-auto col">
+				<div class="footer__copy">© 2014–2023 Михаил&nbsp;Ишметов
+				</div>
+			</div>
 			<div class="col-lg-auto col order-lg-last text-end">
 				<a class="footer__link text-body" href="#"> <span class="link-inner">Политика конфиденциальности</span>
 				</a>
 			</div>
 			<div class="col-lg">
 				<div class="cookie-block" style="display: none">Сайт использует cookie-файлы, чтобы сделать ваше пребывание на&nbsp;нем максимально удобным. Оставаясь на&nbsp;сайте, вы&nbsp;даете свое согласие на&nbsp;обработку персональных данных в&nbsp;соответствии&nbsp;с <a href="#" target="_blank">Политикой конфиденциальности</a>.
-					<svg class="icon icon-close ">
-						<use xlink:href="img/svg/sprite.svg#close"></use>
-					</svg>
+					<div class="cookie-block__close">
+						<svg class="icon icon-close ">
+							<use xlink:href="img/svg/sprite.svg#close"></use>
+						</svg>
+					</div>
 				</div>
 			</div>
 		</div>
