--- a/public/parts/header.html
+++ b/public/parts/header.html
@@ -3,7 +3,7 @@
 <header class="header" id="header">
 	<!-- start top-nav-->
 	<div class="top-nav block-with-lazy">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-auto d-none d-lg-block"></div>
 				<div class="top-nav__col top-nav__col--logo col-lg order-lg-first">
