--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -56,11 +56,11 @@
 let hoverEffectBlock = document.querySelector('.headerBlock__img-wrap');
 new hoverEffect({
 	parent: hoverEffectBlock,
-	intensity: 0.3,
-	intensity1: 0.5,
-	intensity2: 0.5,
-	speedIn: 1,
-	speedOut: 1,
+	intensity: 0.6,
+	intensity1: 1,
+	intensity2: 1,
+	speedIn: .5,
+	speedOut: .5,
 	easing: Circ.easeOut,
 	angle: Math.PI / 4,
 	image1: hoverEffectBlock.dataset.image,
