--- a/public/parts/header.html
+++ b/public/parts/header.html
@@ -7,10 +7,10 @@
 			<div class="row">
 				<div class="col-lg-auto d-none d-lg-block"></div>
 				<div class="top-nav__col top-nav__col--logo col-lg order-lg-first">
-					<a class="top-nav__logo" href="/">
+					<div class="top-nav__logo">
 						<lottie-player class="top-nav__animate lottie-js" src="logo.json" id="logo">
-						</lottie-player><img src="img/logo-text.svg" alt="logo"/>
-					</a>
+						</lottie-player><a href="/"> <img src="img/logo-text.svg" alt="logo"/></a>
+					</div>
 				</div>
 				<div class="top-nav__col top-nav__col--caption col-lg order-lg-first">
 					<div class="top-nav__caption">Дизайн-студия Михаила Ишметова
